# openGL_Playground

./: .gitmodules  CMakeLists.txt  README.txt
include/learnopengl/: shader_s.h
shaders/: 3d_coordinate.vert  color_tri_w_X_offset.vert  textures_combined.frag
src/: main.cpp
